--- a/app/views/lists/index.html.erb
+++ b/app/views/lists/index.html.erb
@@ -2,15 +2,7 @@
 
 <h1>Lists</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Description</th>
-      <th>Completed</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
+<table class="table table-bordered">
   <tbody>
     <% @lists.each do |list| %>
       <tr>
