Add alert to show event messages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
   <body>
     <%= render "lists/navbar" %>
     <div class="container">
+      <%= render "lists/flash" %>
       <%= yield %>
     </div>
   </body>
